--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,13 +50,13 @@ a {
     font-size: 20px;
 }
 .xl {
-    font-size: 35px;
+    font-size: 10px;
 }
 .xl2 {
-    font-size: 25px;
+    font-size: 24px;
 }
 .xl3 {
-    font-size: 30px;
+    font-size: 27px;
 }
 .post::before {
     content: '';
@@ -140,7 +140,9 @@ a {
     @media only screen and (max-width: 600px) {
         .main {
             grid-template-columns: 98%;
+            grid-template-rows: 75%;
             grid-template-areas: 'a';
+            overflow: scroll;
         }
         .axis-vertical {
             height: 600px !important;
