--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,7 +104,7 @@ a {
     animation-timing-function: ease-in-out;
 }
 .red{
-    color: rgb(224, 0, 0);
+    color: #ff2222
 }
 .green{
     color: rgb(0, 177, 0);
