--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inconsolata:wght@500&family=Limelight&family=Lobster&family=Noto+Sans+JP&family=Roboto+Mono:ital,wght@1,200&family=ZCOOL+KuaiLe&display=swap');
+@import url('https://db.onlinewebfonts.com/c/ea250342ec4016561ba9e791c2f39c11?family=Posterama');
 
 html,
 body {
