--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,8 +29,8 @@ a {
 .Limelight {
     font-family: 'Limelight';
 }
-.Lobster {
-    font-family: 'Lobster';
+.Posterama {
+    font-family: 'Posterama';
 }
 .Noto {
     font-family: 'Noto';
