--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,14 +23,14 @@ a {
 .Dancing {
     font-family: 'Dancing';
 }
-.Inconsolata {
-    font-family: 'Inconsolata';
+.Posterama {
+    font-family: 'Posterama';
 }
 .Limelight {
     font-family: 'Limelight';
 }
-.Posterama {
-    font-family: 'Posterama';
+.Lobster {
+    font-family: 'Lobster';
 }
 .Noto {
     font-family: 'Noto';
