--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,8 @@ a {
 .Dancing {
     font-family: 'Dancing';
 }
-.Posterama {
-    font-family: 'Posterama';
+.PosteramaText-Bold {
+    font-family: 'PosteramaText-Bold';
 }
 .Limelight {
     font-family: 'Limelight';
