--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,8 @@ a {
 .Dancing {
     font-family: 'Dancing';
 }
-.PosteramaText-Bold {
-    font-family: 'PosteramaText-Bold';
+.Posterama {
+    font-family: 'Posterama';
 }
 .Limelight {
     font-family: 'Limelight';
