--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ a {
     font-family: 'Dancing';
 }
 .Posterama {
-    font-family: 'Posterama';
+    font-family: 'PosteramaText-Bold';
 }
 .Limelight {
     font-family: 'Limelight';
