--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ a {
 	font-family: "Dancing";
 }
 .Posterama {
-	font-family: "PosteramaText-Bold";
+	font-family: "Posterama";
 }
 .Limelight {
 	font-family: "Limelight";
